KIK-2222 fix j or g letter cut off issue on dashboard

--- a/app/assets/less/layout/dashboard-custom.less
+++ b/app/assets/less/layout/dashboard-custom.less
@@ -223,8 +223,6 @@
     overflow: hidden;
     width: 325px;
     white-space: nowrap;
-    display: inline-block;
-    line-height: 1 !important;
   }
   @media screen and (max-width: @psd) {
     .special_ellipsis_link{
